Huge reorganization in progress

--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -5,11 +5,12 @@
 ## BASH-UTILS PATHS
 
 # Bash-Utils sub-folders paths.
-__BASH_UTILS="$__BASH_UTILS_ROOT/lib"			# Bash-utils library root directory		|	Default --> "$__BASH_UTILS_ROOT/lib"
-__BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"		# Bash-utils binary files folder		|	Default --> "$__BASH_UTILS_ROOT/bin"
-__BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"	# Bash-utils configuration files folder	|	Default --> "$__BASH_UTILS_ROOT/config"
-__BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"		# Bash-utils documentation folder		|	Default --> "$__BASH_UTILS_ROOT/docs"
-__BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"		# Bash-utils projects temporary folder	|	Default --> "$__BASH_UTILS_ROOT/tmp"
+__BASH_UTILS="$__BASH_UTILS_ROOT/lib"				# Bash-utils library root directory						|	Default --> "$__BASH_UTILS_ROOT/lib"
+__BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"			# Bash-utils binary files folder						|	Default --> "$__BASH_UTILS_ROOT/bin"
+__BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"		# Bash-utils configuration files folder					|	Default --> "$__BASH_UTILS_ROOT/config"
+__BASH_UTILS_CONF_INIT="$__BASH_UTILS_CONF/init"	# Bash-utils initialization configuration files folder	|	Default --> "$__BASH_UTILS_CONF/init"
+__BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"			# Bash-utils documentation folder						|	Default --> "$__BASH_UTILS_ROOT/docs"
+__BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"			# Bash-utils projects temporary folder					|	Default --> "$__BASH_UTILS_ROOT/tmp"
 
 # "config" folder's content.
 __BASH_UTILS_CONF_PROJECT_STATUS="$__BASH_UTILS_CONF/ProjectStatus.conf"	# Bash-utils variables status configuration file		|	Default --> "$__BASH_UTILS_CONF/ProjectStatus.conf"
