Modified color code writing, modified color and text variables names and cleaned obsolete library parts

--- a/config/text.conf
+++ b/config/text.conf
@@ -8,7 +8,7 @@
 
 ## RETRIEVAL
 # Get the columns number on the terminal according to its window's lenght
-__TXT_COLS="$(tput cols)"
+__BU_TXT_COLS="$(tput cols)"
 
 # -----------------------------------------------
 
@@ -20,7 +20,7 @@ __TXT_COLS="$(tput cols)"
 ## HEADER'S LINES CHARACTER
 # Caractère utilisé pour dessiner les lignes des headers. Si vous souhaitez mettre un autre caractère à la place d'un tiret, changez le caractère entre les double guillemets.
 # Ne mettez pas plus d'un caractère si vous ne souhaitez pas voir le texte de chaque header apparaître entre plusieurs lignes (une ligne de chaque caractère).
-__TXT_HEADER_LINE_CHAR="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
+__BU_TXT_HEADER_LINE_CHAR="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
 # -----------------------------------------------
 
@@ -31,6 +31,6 @@ __TXT_HEADER_LINE_CHAR="-"		# Caractère à afficher en boucle pour créer une l
 
 ## WRITING CHEVRONS
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
-__TXT_TAB=">>>>"
+__BU_TXT_TAB=">>>>"
 
 # -----------------------------------------------
