Removed obsolete code, remade CheckProjectLogStatus() function's argument array parsing

--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -4,18 +4,24 @@
 
 ## BASH-UTILS PATHS
 
-# Bash-Utils sub-folders paths.
-__BASH_UTILS="$__BASH_UTILS_ROOT/lib"				# Bash-utils library root directory						|	Default --> "$__BASH_UTILS_ROOT/lib"
+# Bash Utils root directory.
+__BASH_UTILS_ROOT="/usr/local/lib/Bash-utils"
+
+# Bash-utils sub-folders paths.
 __BASH_UTILS_BIN="$__BASH_UTILS_ROOT/bin"			# Bash-utils binary files folder						|	Default --> "$__BASH_UTILS_ROOT/bin"
 __BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"		# Bash-utils configuration files folder					|	Default --> "$__BASH_UTILS_ROOT/config"
 __BASH_UTILS_CONF_INIT="$__BASH_UTILS_CONF/init"	# Bash-utils initialization configuration files folder	|	Default --> "$__BASH_UTILS_CONF/init"
 __BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"			# Bash-utils documentation folder						|	Default --> "$__BASH_UTILS_ROOT/docs"
+__BASH_UTILS_LIB="$__BASH_UTILS_ROOT/lib"			# Bash-utils library root directory						|	Default --> "$__BASH_UTILS_ROOT/lib"
 __BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"			# Bash-utils projects temporary folder					|	Default --> "$__BASH_UTILS_ROOT/tmp"
+
+# Bash Utils initializer file's path.
+__BASH_UTILS_INITIALIZER="$__BASH_UTILS_LIB/Initializer.sh"
 
 # "config" folder's content.
 __BASH_UTILS_CONF_PROJECT_STATUS="$__BASH_UTILS_CONF/ProjectStatus.conf"	# Bash-utils variables status configuration file		|	Default --> "$__BASH_UTILS_CONF/ProjectStatus.conf"
 
-# Bash-utils dev-tools paths.
+# Bash Utils dev-tools paths.
 __BASH_UTILS_DEVTOOLS_ROOT="$__BASH_UTILS_ROOT/res/dev-tools"				# Bash-utils development tools root directory			|	Default --> "$__BASH_UTILS_ROOT/projects/dev-tools"
 __BASH_UTILS_DEVTOOLS_BIN="$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"				# Bash-utils development tools binary files folder		|	Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"
 __BASH_UTILS_DEVTOOLS_DSK="$__BASH_UTISL_DEVTOOLS_ROOT/dev-desktop"			# Bash-utils development tools desktop files folder		|	Default --> "$__BASH_UTILS_DEVTOOL_ROOT/"
@@ -24,7 +30,7 @@ __BASH_UTILS_DEVTOOLS_SRC="$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"				# Bash-utils 
 __BASH_UTILS_DEVTOOLS_TRANSL="$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"	# Bash-utils development tools translation files folder	|	Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"
 
 # "lib" folder's content.
-__BASH_UTILS_FUNCTS="$__BASH_UTILS/functions"				# Bash-utils functions root directory					|	Default --> "$__BASH_UTILS/functions"
+__BASH_UTILS_FUNCTS="$__BASH_UTILS_LIB/functions"			# Bash-utils functions root directory					|	Default --> "$__BASH_UTILS_LIB/functions"
 __BASH_UTILS_FUNCTS_BASIS="$__BASH_UTILS_FUNCTS/basis"		# Bash-utils basic functions files directory			|	Default --> "$__BASH_UTILS_FUNCTS/basis"
 __BASH_UTILS_FUNCTS_MAIN="$__BASH_UTILS_FUNCTS/main"		# Bash-utils main functions files directory				|	Default --> "$__BASH_UTILS_FUNCTS/main"
 __BASH_UTILS_FUNCTS_OS="$__BASH_UTILS_FUNCTS/os-specific"	# Bash-utils operating system specific functions folder	|	Default --> "__BASH_UTILS_FUNCTS/os-specific"
@@ -35,5 +41,5 @@ __BASH_UTILS_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_FUNCTS_BASIS/"*.lib "$__BASH_U
 
 # -----------------------------------------------
 
-## END OF Bash-utils GLOBAL VARIABLES DEFINITION
+## END OF Bash Utils GLOBAL VARIABLES DEFINITION
 
