Modified the log file and path creation

--- a/config/init/colors.conf
+++ b/config/init/colors.conf
@@ -17,8 +17,8 @@ function WriteTextColor
 	p_colorCode=$1
 
 	#***** Code *****
-	if [ -f "$__BASH_UTILS_FILE_COLOR_CODE_PATH" ]; then
-		tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__BASH_UTILS_FILE_COLOR_CODE_PATH"
+	if [ -n "$__PROJECT_COLOR_CODE_FILE_PATH" ] && [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
+		tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__PROJECT_COLOR_CODE_FILE_PATH"
 	else
 		tput setaf "$p_colorCode"
 	fi
