--- a/config/init/init.conf
+++ b/config/init/init.conf
@@ -51,6 +51,10 @@ __PROJECT_LOG_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"	# Def
 __PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
 __PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"
 
+# Defining
+__PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
+__PROJECT_COLOR_CODE_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_COLOR_CODE_FILE_NAME"
+
 # -----------------------------------------------
 
 
