--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -2,6 +2,7 @@
 
 #### BASH-UTILS VARIABLES
 
+
 ## BASH-UTILS PATHS
 
 # Bash Utils root directory.
@@ -13,6 +14,7 @@ __BASH_UTILS_CONF="$__BASH_UTILS_ROOT/config"		# Bash Utils configuration files 
 __BASH_UTILS_CONF_INIT="$__BASH_UTILS_CONF/init"	# Bash Utils initialization configuration files folder	|	Default --> "$__BASH_UTILS_CONF/init"
 __BASH_UTILS_DOCS="$__BASH_UTILS_ROOT/docs"			# Bash Utils documentation folder						|	Default --> "$__BASH_UTILS_ROOT/docs"
 __BASH_UTILS_LIB="$__BASH_UTILS_ROOT/lib"			# Bash Utils library root directory						|	Default --> "$__BASH_UTILS_ROOT/lib"
+__BASH_UTILS_RES="$__BASH_UTILS_ROOT/res"           # Bash Utils resources directory                        |   Default --> "$__BASH_UTILS_ROOT/res"
 __BASH_UTILS_TMP="$__BASH_UTILS_ROOT/tmp"			# Bash Utils projects temporary folder					|	Default --> "$__BASH_UTILS_ROOT/tmp"
 
 # Bash Utils files paths.
@@ -22,9 +24,9 @@ __BASH_UTILS_INITIALIZER="$__BASH_UTILS_LIB/Initializer.sh"					# Bash Utils ini
 __BASH_UTILS_CONF_PROJECT_STATUS="$__BASH_UTILS_CONF/ProjectStatus.conf"	# Bash Utils variables status configuration file		|	Default --> "$__BASH_UTILS_CONF/ProjectStatus.conf"
 
 # Bash Utils dev-tools paths.
-__BASH_UTILS_DEVTOOLS_ROOT="$__BASH_UTILS_ROOT/res/dev-tools"				# Bash Utils development tools root directory			|	Default --> "$__BASH_UTILS_ROOT/projects/dev-tools"
+__BASH_UTILS_DEVTOOLS_ROOT="$__BASH_UTILS_RES/dev-tools"				    # Bash Utils development tools root directory			|	Default --> "$__BASH_UTILS_RES/dev-tools"
 __BASH_UTILS_DEVTOOLS_BIN="$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"				# Bash Utils development tools binary files folder		|	Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-bin"
-__BASH_UTILS_DEVTOOLS_DSK="$__BASH_UTISL_DEVTOOLS_ROOT/dev-desktop"			# Bash Utils development tools desktop files folder		|	Default --> "$__BASH_UTILS_DEVTOOL_ROOT/"
+__BASH_UTILS_DEVTOOLS_DSK="$__BASH_UTISL_DEVTOOLS_ROOT/dev-desktop"			# Bash Utils development tools desktop files folder		|	Default --> "$__BASH_UTILS_DEVTOOL_ROOT/dev-desktop"
 __BASH_UTILS_DEVTOOLS_IMG="$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"				# Bash Utils development tools desktop icons folder		|	Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-img"
 __BASH_UTILS_DEVTOOLS_SRC="$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"				# Bash Utils development tools source files				|	Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-src"
 __BASH_UTILS_DEVTOOLS_TRANSL="$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"	# Bash Utils development tools translation files folder	|	Default --> "$__BASH_UTILS_DEVTOOLS_ROOT/dev-translations"
