Creation of an initializer file version 3

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -35,6 +35,7 @@ function WriteTextColor
 ## COLOR CODES FOR ENCODING
 __BU_COLOR_CODE_BLUE='4'
 __BU_COLOR_CODE_CYAN='6'
+__BU_COLOR_CODE_GRAY="244"
 __BU_COLOR_CODE_GREEN='82'
 __BU_COLOR_CODE_ORANGE='166'
 __BU_COLOR_CODE_PURPLE='165'
@@ -67,6 +68,7 @@ __BU_COLOR_CODE_WARNING="$(WriteTextColor "226")"
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
 __BU_COLOR_BLUE="$(WriteTextColor "$__BU_COLOR_CODE_BLUE")"       	# Deep blue		--> Couleur des headers à n'écrire que dans le fichier de logs.
 __BU_COLOR_CYAN="$(WriteTextColor "$__BU_COLOR_CODE_CYAN")"       	# Cyan blue		--> Couleur des headers.
+__BU_COLOR_GRAY="$(WriteTextColor "$__BU_COLOR_CODE_GRAY")"         # Gray
 __BU_COLOR_GREEN="$(WriteTextColor "$__BU_COLOR_CODE_GREEN")"     	# Light green		--> Couleur d'affichage des messages de succès la sous-étape.
 __BU_COLOR_ORANGE="$(WriteTextColor "$__BU_COLOR_CODE_ORANGE")"   	# Orange
 __BU_COLOR_PURPLE="$(WriteTextColor "$__BU_COLOR_CODE_PURPLE")"		# Purple
@@ -74,7 +76,7 @@ __BU_COLOR_RED="$(WriteTextColor "$__BU_COLOR_CODE_RED")"	      	# Light red		--
 __BU_COLOR_YELLOW="$(WriteTextColor "$__BU_COLOR_CODE_YELLOW")"		# Light yellow		--> Couleur d'affichage des messages de passage à la prochaine sous-étapes.
 
 __BU_COLOR_ERROR="$__BU_COLOR_CODE_ERROR"							# Error text display color
-__BU_COLOR_HIGHLIGHT="$__BU_COLOR_CODE_HIGHLIGHT"					# # Highlighted text display color
+__BU_COLOR_HIGHLIGHT="$__BU_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
 __BU_COLOR_RESET="$__BU_COLOR_CODE_RESET"							# Reset color to terminal's default text color
 __BU_COLOR_SUCCESS="$__BU_COLOR_CODE_SUCCESS"						# Success text display color
 __BU_COLOR_WARNING="$__BU_COLOR_CODE_WARNING"						# Warning text display color
