--- a/config/init.conf
+++ b/config/init.conf
@@ -53,7 +53,7 @@ __PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"			# Default -
 
 # Defining
 __PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
-__PROJECT_COLOR_CODE_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_COLOR_CODE_FILE_NAME"
+__PROJECT_COLOR_CODE_FILE_PATH="$_PROJECT_TMP_DIR/$__PROJECT_COLOR_CODE_FILE_NAME"
 
 # -----------------------------------------------
 
