--- a/config/colors.conf
+++ b/config/colors.conf
@@ -38,8 +38,10 @@ __BU_COLOR_CODE_CYAN='6'
 __BU_COLOR_CODE_GRAY="244"
 __BU_COLOR_CODE_GREEN='82'
 __BU_COLOR_CODE_ORANGE='166'
+__BU_COLOR_CODE_PINK='200'
 __BU_COLOR_CODE_PURPLE='165'
 __BU_COLOR_CODE_RED='196'
+__BU_COLOR_CODE_TURQUOISE='51'
 __BU_COLOR_CODE_YELLOW='226'
 
 # -----------------------------------------------
@@ -66,14 +68,16 @@ __BU_COLOR_CODE_WARNING="$(WriteTextColor "226")"
 ## ENCODING WITH THE "tput" COMMAND.
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
-__BU_COLOR_BLUE="$(WriteTextColor "$__BU_COLOR_CODE_BLUE")"       	# Deep blue		--> Couleur des headers à n'écrire que dans le fichier de logs.
-__BU_COLOR_CYAN="$(WriteTextColor "$__BU_COLOR_CODE_CYAN")"       	# Cyan blue		--> Couleur des headers.
+__BU_COLOR_BLUE="$(WriteTextColor "$__BU_COLOR_CODE_BLUE")"       	# Deep blue
+__BU_COLOR_CYAN="$(WriteTextColor "$__BU_COLOR_CODE_CYAN")"       	# Cyan blue
 __BU_COLOR_GRAY="$(WriteTextColor "$__BU_COLOR_CODE_GRAY")"         # Gray
-__BU_COLOR_GREEN="$(WriteTextColor "$__BU_COLOR_CODE_GREEN")"     	# Light green		--> Couleur d'affichage des messages de succès la sous-étape.
+__BU_COLOR_GREEN="$(WriteTextColor "$__BU_COLOR_CODE_GREEN")"     	# Light green
 __BU_COLOR_ORANGE="$(WriteTextColor "$__BU_COLOR_CODE_ORANGE")"   	# Orange
+__BU_COLOR_PINK="$(WriteTextColor "$__BU_COLOR_CODE_PINK")"         # Pink
 __BU_COLOR_PURPLE="$(WriteTextColor "$__BU_COLOR_CODE_PURPLE")"		# Purple
-__BU_COLOR_RED="$(WriteTextColor "$__BU_COLOR_CODE_RED")"	      	# Light red		--> Couleur d'affichage des messages d'erreur de la sous-étape.
-__BU_COLOR_YELLOW="$(WriteTextColor "$__BU_COLOR_CODE_YELLOW")"		# Light yellow		--> Couleur d'affichage des messages de passage à la prochaine sous-étapes.
+__BU_COLOR_RED="$(WriteTextColor "$__BU_COLOR_CODE_RED")"	      	# Light red
+__BU_COLOR_TURQUOISE=$(WriteTextColor "$__BU_COLOR_CODE_TURQUOISE") # Turquoise
+__BU_COLOR_YELLOW="$(WriteTextColor "$__BU_COLOR_CODE_YELLOW")"		# Light yellow
 
 __BU_COLOR_ERROR="$__BU_COLOR_CODE_ERROR"							# Error text display color
 __BU_COLOR_HIGHLIGHT="$__BU_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
