Modified the default bash_profile

--- a/config/init.conf
+++ b/config/init.conf
@@ -35,25 +35,25 @@ __PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')         # Name of the project 
 
 # To remove these folders, please run the "rm -rf $folder" command with sudo if you're not logged as super-user.
 if [ "$EUID" -eq 0 ]; then
-    __PROJECT_TMP_DIR="$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"	# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"
+    __PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"	# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"
 
 else
-    __PROJECT_TMP_DIR="$__BASH_UTILS_TMP/$__PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME"
+    __PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME"
 fi
 
 # Defining project's log file's path.
 __PROJECT_LOG_DIR_NAME="logs"												# Default --> "logs"
-__PROJECT_LOG_DIR_PATH="$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"
+__PROJECT_LOG_DIR_PATH="$__PROJECT_TMP_DIR_PATH/$__PROJECT_LOG_DIR_NAME"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"
 __PROJECT_LOG_FILE_NAME="$__PROJECT_NAME.log"								# Default --> "$__PROJECT_NAME.log"
 __PROJECT_LOG_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"	# Default --> "$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"
 
 # Defining project's text formatting building's output file.
 __PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
-__PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"
+__PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR_PATH/$__PROJECT_TMP_TR_FILE"			# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_TMP_TR_FILE"
 
 # Defining
 __PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
-__PROJECT_COLOR_CODE_FILE_PATH="$_PROJECT_TMP_DIR/$__PROJECT_COLOR_CODE_FILE_NAME"
+__PROJECT_COLOR_CODE_FILE_PATH="$_PROJECT_TMP_DIR_PATH/$__PROJECT_COLOR_CODE_FILE_NAME"
 
 # -----------------------------------------------
 
