Adding Decho() function customizations

--- a/config/text.conf
+++ b/config/text.conf
@@ -30,6 +30,13 @@ __BU_TXT_PRINT_TAB=">>>>"
 # Bold
 __BU_TXT_BOLD="$(tput bold)"
 
+# Italic
+__BU_TXT_ITALIC="$(tput )"
 
+# Reset
+__BU_TXT_RESET="$(tput sgr0)"
+
+# Underline
+__BU_TXT_UNDERLINE="$(tput )"
 
 # -----------------------------------------------
