Added the  status variable

--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -13,6 +13,11 @@ __STAT_DEBUG="false"
 # shellcheck disable=SC2034
 __STAT_ERROR=""
 
+# Project's error handling text formatting --> This variable accepts "true" or "false" as value.
+# Default value : "true"
+# shellcheck disable=SC2034
+__STAT_ERROR_TXT_FMT="true"
+
 # Project's exit code --> This variable only accepts an integer.
 # Default value : "1"
 # shellcheck disable=SC2034
