--- a/config/colors.conf
+++ b/config/colors.conf
@@ -17,11 +17,13 @@ function WriteTextColor
 	p_colorCode=$1
 
 	#***** Code *****
-	if [ -n "$__PROJECT_COLOR_CODE_FILE_PATH" ] && [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
-		tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__PROJECT_COLOR_CODE_FILE_PATH"
-	else
-		tput setaf "$p_colorCode"
-	fi
+	if [ "$__STAT_TXT_FMT" = "true" ]; then
+        if [ -n "$__PROJECT_COLOR_CODE_FILE_PATH" ] && [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
+            tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__PROJECT_COLOR_CODE_FILE_PATH"
+        else
+            tput setaf "$p_colorCode"
+        fi
+    fi
 }
 
 # -----------------------------------------------
