--- a/config/text.conf
+++ b/config/text.conf
@@ -4,6 +4,22 @@
 
 ######################################## DEFINING VARIABLES #######################################
 
+#### FUNCTIONS DEFINTION
+
+##
+
+# Checking if the "$__STAT_TXT_FMT" status variable's value is "true".
+function CheckFmt
+{
+    if [ "$__STAT_TXT_FMT" = "true" ]; then
+        return 0
+    fi
+}
+
+# -----------------------------------------------
+
+
+
 #### TEXT PROCESSING
 
 ## COLUMNS
@@ -28,15 +44,15 @@ __BU_TXT_PRINT_TAB=">>>>"
 ## TEXT FORMATTING
 
 # Bold
-__BU_TXT_BOLD="$(tput bold)"
+__BU_TXT_BOLD="$(CheckFmt && tput bold)"
 
 # Italic
-__BU_TXT_ITALIC="$(tput )"
+__BU_TXT_ITALIC="$(CheckFmt && tput )"
 
 # Reset
-__BU_TXT_RESET="$(tput sgr0)"
+__BU_TXT_RESET="$(CheckFmt && tput sgr0)"
 
 # Underline
-__BU_TXT_UNDERLINE="$(tput )"
+__BU_TXT_UNDERLINE="$(CheckFmt && tput )"
 
 # -----------------------------------------------
