--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -13,11 +13,6 @@ __STAT_DEBUG="false"
 # shellcheck disable=SC2034
 __STAT_ERROR=""
 
-# Project's error handling text formatting --> This variable accepts "true" or "false" as value.
-# Default value : "true"
-# shellcheck disable=SC2034
-__STAT_ERROR_TXT_FMT="true"
-
 # Project's exit code --> This variable only accepts an integer.
 # Default value : "1"
 # shellcheck disable=SC2034
@@ -47,6 +42,11 @@ __STAT_OPERATE_ROOT="forbidden"
 # Default value : ".5"
 # shellcheck disable=SC2034
 __STAT_TIME_TXT=".5"
+
+# Project's handling text formatting --> This variable accepts "true" or "false" as value.
+# Default value : "true"
+# shellcheck disable=SC2034
+__STAT_TXT_FMT="true"
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
 # --> This variable will be completed with the "CheckSupportedOSType" function.
