Adding tput and non-tput text formatting support

--- a/config/text.conf
+++ b/config/text.conf
@@ -4,22 +4,6 @@
 
 ######################################## DEFINING VARIABLES #######################################
 
-#### FUNCTIONS DEFINTION
-
-##
-
-# Checking if the "$__STAT_TXT_FMT" status variable's value is "true".
-function CheckFmt
-{
-    if [ "$__STAT_TXT_FMT" = "true" ]; then
-        return 0
-    fi
-}
-
-# -----------------------------------------------
-
-
-
 #### TEXT PROCESSING
 
 ## COLUMNS
@@ -45,14 +29,17 @@ __BU_TXT_PRINT_TAB=">>>>"
 
 # Bold
 __BU_TXT_BOLD="$(CheckFmt && tput bold)"
+__BU_TXT_BOLD_RESET="$(tput rmso)"
 
 # Italic
-__BU_TXT_ITALIC="$(CheckFmt && tput )"
+__BU_TXT_ITALIC="$(CheckFmt && tput sitm)"
+__BU_TXT_ITALIC_RESET=$(tput ritm)
 
 # Reset
 __BU_TXT_RESET="$(CheckFmt && tput sgr0)"
 
 # Underline
-__BU_TXT_UNDERLINE="$(CheckFmt && tput )"
+__BU_TXT_UNDERLINE="$(CheckFmt && tput smul)"
+__BU_TXT_UNDERLINE_RESET="$(tput rmul)"
 
 # -----------------------------------------------
