--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -4,7 +4,7 @@
 
 ## PATH PROCESSING FUNCTIONS
 
-# Getting the path returned by the "find" command.
+# Getting the path returned by the "find" command, to make the file searching case insensitive.
 function BP_FindPath
 {
     # $1 = Parent directory.
@@ -24,7 +24,7 @@ function BP_FindPath
 ## BASH-UTILS DIRECTORIES PATHS
 
 # Bash Utils root directory.
-__BASH_UTILS_ROOT="/usr/local/lib/Bash-utils"
+__BASH_UTILS_ROOT="/home/dimob/Projets/Bash-utils"
 
 # Bash Utils sub-folders paths.
 __BASH_UTILS_BIN="$(BP_FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils binary files folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
@@ -43,11 +43,10 @@ __BASH_UTILS_DEVTOOLS_SRC="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-src"
 __BASH_UTILS_DEVTOOLS_TRANSL="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-translations")"     # Bash Utils development tools translation files folder	|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
 
 # "lib" folder's content.
-__BASH_UTILS_LIB_FUNCTS="$(BP_FindPath "$__BASH_UTILS_LIB" "functions")"            # Bash Utils functions root directory                       |   Default parent folder --> "$__BASH_UTILS_LIB/"
-__BASH_UTILS_LIB_FUNCTS_BASIS="$(BP_FindPath "$__BASH_UTILS_FUNCTS" "basis")"       # Bash Utils basic functions files directory                |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_FUNCTS_MAIN="$(BP_FindPath "$__BASH_UTILS_FUNCTS" "main")"         # Bash Utils main functions files directory                 |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_FUNCTS_OS="$(BP_FindPath "$__BASH_UTILS_FUNCTS" "os-specific")"    # Bash Utils operating system specific functions directory  |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_LANG="$(BP_FindPath "$__BASH_UTILS" "lang")"                       # Bash Utils translations files directory                   |   Default parent folder --> "$__BASH_UTILS_LIB/"
+__BASH_UTILS_LIB_FUNCTS="$(BP_FindPath "$__BASH_UTILS_LIB" "functions")"                # Bash Utils functions root directory                       |   Default parent folder --> "$__BASH_UTILS_LIB/"
+__BASH_UTILS_LIB_FUNCTS_MAIN="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "main")"         # Bash Utils main functions files directory                 |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
+__BASH_UTILS_LIB_FUNCTS_OS="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "os-specific")"    # Bash Utils operating system specific functions directory  |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
+__BASH_UTILS_LIB_LANG="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"                       # Bash Utils translations files directory                   |   Default parent folder --> "$__BASH_UTILS_LIB/"
 
 # -----------------------------------------------
 
@@ -64,7 +63,8 @@ __BASH_UTILS_CONF_FILE_TIME="$(BP_FindPath "$__BASH_UTILS_CONF" "Time.conf")"   
 __BASH_UTILS_LIB_FILE_INITIALIZER="$(BP_FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file
 
 # "functions" folder's sub-folders content.
-__BASH_UTILS_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_FUNCTS_BASIS/"*.lib "$__BASH_UTILS_FUNCTS_MAIN/"*.lib )
+# TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
+__BASH_UTILS_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_LIB_FUNCTS_MAIN/"*.lib )
 
 # -----------------------------------------------
 
