Improved the environment integration for the /home/dimob/Projets/Bash-utils global variable

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -17,7 +17,7 @@ function WriteTextColor
 	p_colorCode=$1
 
 	#***** Code *****
-	if [ "$__STAT_TXT_FMT" = "true" ]; then
+	if CheckFmt; then
         if [ -n "$__PROJECT_COLOR_CODE_FILE_PATH" ] && [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
             tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__PROJECT_COLOR_CODE_FILE_PATH"
         else
