--- a/config/text.conf
+++ b/config/text.conf
@@ -29,17 +29,17 @@ __BU_TXT_PRINT_TAB=">>>>"
 
 # Bold
 __BU_TXT_BOLD="$(CheckFmt && tput bold)"
-__BU_TXT_BOLD_RESET="$(tput rmso)"
+__BU_TXT_BOLD_RESET="$(CheckFmt && tput rmso)"
 
 # Italic
 __BU_TXT_ITALIC="$(CheckFmt && tput sitm)"
-__BU_TXT_ITALIC_RESET=$(tput ritm)
+__BU_TXT_ITALIC_RESET=$(CheckFmt && tput ritm)
 
 # Reset
 __BU_TXT_RESET="$(CheckFmt && tput sgr0)"
 
 # Underline
 __BU_TXT_UNDERLINE="$(CheckFmt && tput smul)"
-__BU_TXT_UNDERLINE_RESET="$(tput rmul)"
+__BU_TXT_UNDERLINE_RESET="$(CheckFmt && tput rmul)"
 
 # -----------------------------------------------
