--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -24,7 +24,11 @@ function BP_FindPath
 ## BASH-UTILS DIRECTORIES PATHS
 
 # Bash Utils root directory.
-__BASH_UTILS_ROOT="/home/dimob/Projets/Bash-utils"
+
+# For a better environment integration, it is highly advised to store the path in a file
+# in the user's home directory, and to call the "cat" command to display its value.
+
+__BASH_UTILS_ROOT="$(cat $HOME/Bash-utils-root-val.path)"
 
 # Bash Utils sub-folders paths.
 __BASH_UTILS_BIN="$(BP_FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils binary files folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
