Added black and white colors, and the HeaderGray<col> functions

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -35,6 +35,7 @@ function WriteTextColor
 #### COLOR ENCODING
 
 ## COLOR CODES FOR ENCODING
+__BU_COLOR_CODE_BLACK='0'
 __BU_COLOR_CODE_BLUE='4'
 __BU_COLOR_CODE_CYAN='6'
 __BU_COLOR_CODE_GRAY="244"
@@ -44,6 +45,7 @@ __BU_COLOR_CODE_PINK='200'
 __BU_COLOR_CODE_PURPLE='165'
 __BU_COLOR_CODE_RED='196'
 __BU_COLOR_CODE_TURQUOISE='51'
+__BU_COLOR_CODE_WHITE='15'
 __BU_COLOR_CODE_YELLOW='226'
 
 # -----------------------------------------------
@@ -70,6 +72,7 @@ __BU_COLOR_CODE_WARNING="$(WriteTextColor "226")"
 ## ENCODING WITH THE "tput" COMMAND.
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
+__BU_COLOR_BLACK="$(WriteTextColor "$__BU_COLOR_CODE_BLACK")"       # Black
 __BU_COLOR_BLUE="$(WriteTextColor "$__BU_COLOR_CODE_BLUE")"       	# Deep blue
 __BU_COLOR_CYAN="$(WriteTextColor "$__BU_COLOR_CODE_CYAN")"       	# Cyan blue
 __BU_COLOR_GRAY="$(WriteTextColor "$__BU_COLOR_CODE_GRAY")"         # Gray
@@ -79,6 +82,7 @@ __BU_COLOR_PINK="$(WriteTextColor "$__BU_COLOR_CODE_PINK")"         # Pink
 __BU_COLOR_PURPLE="$(WriteTextColor "$__BU_COLOR_CODE_PURPLE")"		# Purple
 __BU_COLOR_RED="$(WriteTextColor "$__BU_COLOR_CODE_RED")"	      	# Light red
 __BU_COLOR_TURQUOISE=$(WriteTextColor "$__BU_COLOR_CODE_TURQUOISE") # Turquoise
+__BU_COLOR_WHITE="$(WriteTextColor "$__BU_COLOR_CODE_WHITE")"       # White
 __BU_COLOR_YELLOW="$(WriteTextColor "$__BU_COLOR_CODE_YELLOW")"		# Light yellow
 
 __BU_COLOR_ERROR="$__BU_COLOR_CODE_ERROR"							# Error text display color
