Saving before changing the CheckProjectLogStatus arguments array management

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -18,7 +18,7 @@ function WriteTextColor
 
 	#***** Code *****
 	if CheckFmt; then
-        if [ -n "$__PROJECT_COLOR_CODE_FILE_PATH" ] && [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
+        if [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
             tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__PROJECT_COLOR_CODE_FILE_PATH"
         else
             tput setaf "$p_colorCode"
