--- a/config/colors.conf
+++ b/config/colors.conf
@@ -23,6 +23,8 @@ function WriteTextColor
         else
             tput setaf "$p_colorCode"
         fi
+    else
+        tput setaf "$p_colorCode" >/dev/null
     fi
 }
 
