--- a/config/colors.conf
+++ b/config/colors.conf
@@ -11,7 +11,7 @@
 ## COLOR CODES
 
 # Writing the color code into a file, to be processed by any function which needs to know what is the current text color.
-function WriteTextColor
+function WriteTextColor()
 {
 	#***** Parameters *****
 	p_colorCode=$1
