--- a/config/init.conf
+++ b/config/init.conf
@@ -7,7 +7,7 @@
 ## TEXT PROCESSING FUNCTIONS
 
 # Checking if the "$__STAT_TXT_FMT" status variable's value is "true".
-function CheckFmt
+function CheckFmt()
 {
     if [ "$__STAT_TXT_FMT" = "true" ]; then
         return 0
