--- a/config/colors.conf
+++ b/config/colors.conf
@@ -52,7 +52,7 @@ __BU_COLOR_CODE_YELLOW='226'
 
 # -----------------------------------------------
 
-## COLOR CODES FOR SPECIFIC TEXT DISPLAY
+## COLOR CODES FOR SPECIFIC TEXT DISPLAY, PRINTED AND REDIRECTED WITH THE "WriteTextColor" FUNCTIONS, THEN ENCODED WITH THE "tput" COMMAND
 
 # Error text display color				| Default color : "196"	(red)
 __BU_COLOR_CODE_ERROR="$(WriteTextColor "196")"
@@ -71,7 +71,7 @@ __BU_COLOR_CODE_WARNING="$(WriteTextColor "226")"
 
 # -----------------------------------------------
 
-## ENCODING WITH THE "tput" COMMAND.
+## ENCODING WITH THE "tput" COMMAND AND PRINTED AND REDIRECTED WITH THE "WriteTextColor" FUNCTIONS
 
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
 __BU_COLOR_BLACK="$(WriteTextColor "$__BU_COLOR_CODE_BLACK")"       # Black
