--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -5,7 +5,7 @@
 ## PATH PROCESSING FUNCTIONS
 
 # Getting the path returned by the "find" command, to make the file searching case insensitive.
-function BP_FindPath
+function BP__FindPath
 {
     # $1 = Parent directory.
     # $2 = Targeted directory or file.
@@ -31,40 +31,40 @@ function BP_FindPath
 __BASH_UTILS_ROOT="$(cat $HOME/Bash-utils-root-val.path)"
 
 # Bash Utils sub-folders paths.
-__BASH_UTILS_BIN="$(BP_FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils binary files folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_CONF="$(BP_FindPath "$__BASH_UTILS_ROOT" "config")"		# Bash Utils configuration files folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_DOCS="$(BP_FindPath "$__BASH_UTILS_ROOT" "docs")"			# Bash Utils documentation folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_LIB="$(BP_FindPath "$__BASH_UTILS_ROOT" "lib")"			# Bash Utils library root directory						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_RES="$(BP_FindPath "$__BASH_UTILS_ROOT" "res")"            # Bash Utils resources directory                        |   Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_TMP="$(BP_FindPath "$__BASH_UTILS_ROOT" "tmp")"			# Bash Utils projects temporary folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_BIN="$(BP__FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils binary files folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_CONF="$(BP__FindPath "$__BASH_UTILS_ROOT" "config")"		# Bash Utils configuration files folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_DOCS="$(BP__FindPath "$__BASH_UTILS_ROOT" "docs")"			# Bash Utils documentation folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_LIB="$(BP__FindPath "$__BASH_UTILS_ROOT" "lib")"			# Bash Utils library root directory						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_RES="$(BP__FindPath "$__BASH_UTILS_ROOT" "res")"            # Bash Utils resources directory                        |   Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_TMP="$(BP__FindPath "$__BASH_UTILS_ROOT" "tmp")"			# Bash Utils projects temporary folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 
 # Bash Utils dev-tools paths.
-__BASH_UTILS_DEVTOOLS_ROOT="$(BP_FindPath "$__BASH_UTILS_RES" "dev-tools")"                        # Bash Utils development tools root directory			|	Default parent folder --> "$__BASH_UTILS_RES/"
-__BASH_UTILS_DEVTOOLS_BIN="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
-__BASH_UTILS_DEVTOOLS_DSK="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
-__BASH_UTILS_DEVTOOLS_IMG="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
-__BASH_UTILS_DEVTOOLS_SRC="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-src")"                 # Bash Utils development tools source files				|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
-__BASH_UTILS_DEVTOOLS_TRANSL="$(BP_FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-translations")"     # Bash Utils development tools translation files folder	|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
+__BASH_UTILS_DEVTOOLS_ROOT="$(BP__FindPath "$__BASH_UTILS_RES" "dev-tools")"                        # Bash Utils development tools root directory			|	Default parent folder --> "$__BASH_UTILS_RES/"
+__BASH_UTILS_DEVTOOLS_BIN="$(BP__FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
+__BASH_UTILS_DEVTOOLS_DSK="$(BP__FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
+__BASH_UTILS_DEVTOOLS_IMG="$(BP__FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
+__BASH_UTILS_DEVTOOLS_SRC="$(BP__FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-src")"                 # Bash Utils development tools source files				|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
+__BASH_UTILS_DEVTOOLS_TRANSL="$(BP__FindPath "$__BASH_UTILS_DEVTOOLS_ROOT" "dev-translations")"     # Bash Utils development tools translation files folder	|	Default parent folder --> "$__BASH_UTILS_DEVTOOLS_ROOT/"
 
 # "lib" folder's content.
-__BASH_UTILS_LIB_FUNCTS="$(BP_FindPath "$__BASH_UTILS_LIB" "functions")"                # Bash Utils functions root directory                       |   Default parent folder --> "$__BASH_UTILS_LIB/"
-__BASH_UTILS_LIB_FUNCTS_MAIN="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "main")"         # Bash Utils main functions files directory                 |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_FUNCTS_OS="$(BP_FindPath "$__BASH_UTILS_LIB_FUNCTS" "os-specific")"    # Bash Utils operating system specific functions directory  |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
-__BASH_UTILS_LIB_LANG="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"                       # Bash Utils translations files directory                   |   Default parent folder --> "$__BASH_UTILS_LIB/"
+__BASH_UTILS_LIB_FUNCTS="$(BP__FindPath "$__BASH_UTILS_LIB" "functions")"                # Bash Utils functions root directory                       |   Default parent folder --> "$__BASH_UTILS_LIB/"
+__BASH_UTILS_LIB_FUNCTS_MAIN="$(BP__FindPath "$__BASH_UTILS_LIB_FUNCTS" "main")"         # Bash Utils main functions files directory                 |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
+__BASH_UTILS_LIB_FUNCTS_OS="$(BP__FindPath "$__BASH_UTILS_LIB_FUNCTS" "os-specific")"    # Bash Utils operating system specific functions directory  |   Default parent folder --> "$__BASH_UTILS_LIB_FUNCTS/"
+__BASH_UTILS_LIB_LANG="$(BP__FindPath "$__BASH_UTILS_LIB" "lang")"                       # Bash Utils translations files directory                   |   Default parent folder --> "$__BASH_UTILS_LIB/"
 
 # -----------------------------------------------
 
 ## BASH UTIILS FILES PATHS
 
 # "config" folder's content.
-__BASH_UTILS_CONF_FILE_COLORS="$(BP_FindPath "$__BASH_UTILS_CONF" "Colors.conf")"                   # Bash Utils color encoding variables configuration file.
-__BASH_UTILS_CONF_FILE_INIT="$(BP_FindPath "$__BASH_UTILS_CONF" "init.conf")"                       # Project's initialization variables.
-__BASH_UTILS_CONF_FILE_PROJECT_STATUS="$(BP_FindPath "$__BASH_UTILS_CONF" "ProjectStatus.conf")"    # Bash Utils status variables configuration file.
-__BASH_UTILS_CONF_FILE_TEXT="$(BP_FindPath "$__BASH_UTILS_CONF" "Text.conf")"                       # Bash Utils text variables configuration file.
-__BASH_UTILS_CONF_FILE_TIME="$(BP_FindPath "$__BASH_UTILS_CONF" "Time.conf")"                       # Bash Utils time variables configuration file.
+__BASH_UTILS_CONF_FILE_COLORS="$(BP__FindPath "$__BASH_UTILS_CONF" "Colors.conf")"                   # Bash Utils color encoding variables configuration file.
+__BASH_UTILS_CONF_FILE_INIT="$(BP__FindPath "$__BASH_UTILS_CONF" "init.conf")"                       # Project's initialization variables.
+__BASH_UTILS_CONF_FILE_PROJECT_STATUS="$(BP__FindPath "$__BASH_UTILS_CONF" "ProjectStatus.conf")"    # Bash Utils status variables configuration file.
+__BASH_UTILS_CONF_FILE_TEXT="$(BP__FindPath "$__BASH_UTILS_CONF" "Text.conf")"                       # Bash Utils text variables configuration file.
+__BASH_UTILS_CONF_FILE_TIME="$(BP__FindPath "$__BASH_UTILS_CONF" "Time.conf")"                       # Bash Utils time variables configuration file.
 
 # Bash Utils initializer path.
-__BASH_UTILS_LIB_FILE_INITIALIZER="$(BP_FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file
+__BASH_UTILS_LIB_FILE_INITIALIZER="$(BP__FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
