--- a/config/init.conf
+++ b/config/init.conf
@@ -6,6 +6,9 @@
 
 ## VARIABLES DECLARATIONS
 
+# Initialization status.
+__INIT_IS_INITALIZING="true"
+
 # Array of strings, 
 __INIT_STR_ARRAY=()
 
