--- a/config/time.conf
+++ b/config/time.conf
@@ -8,10 +8,10 @@
 
 ## GETTING THE DATE
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
-__TIME_DATE=$(date +"%Y-%m-%d %Hh-%Mm-%Ss")
+__BU_TIME_DATE=$(date +"%Y-%m-%d %Hh-%Mm-%Ss")
 
 # -----------------------------------------------
 
 ## PRINTING THE DATE
 # Displaying the current date YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second) with a colored text (for a better view in the log file).
-__TIME_DATE_DISPLAY=$(printf "$(tput setaf 111)$__TIME_DATE$(tput sgr0)")
+__BU_TIME_DATE_DISPLAY=$(printf "$(tput setaf 78)[ $(tput setaf 111)$__BU_TIME_DATE $(tput setaf 78) ]$(tput sgr0)")
