Replaced the file color code by a global variable

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -18,11 +18,9 @@ function WriteTextColor()
 
 	#***** Code *****
 	if CheckFmt; then
-        if [ -f "$__PROJECT_COLOR_CODE_FILE_PATH" ]; then
-            tput setaf "$p_colorCode" && echo "$p_colorCode" > "$__PROJECT_COLOR_CODE_FILE_PATH"
-        else
-            tput setaf "$p_colorCode"
-        fi
+        tput setaf "$p_colorCode" && __PROJECT_COLOR_CODE="$p_colorCode"
+    else
+        return 1
     fi
 }
 
