Renamed every global variables beginning with '__PROJECT_'

--- a/config/colors.conf
+++ b/config/colors.conf
@@ -18,7 +18,7 @@ function WriteTextColor()
 
 	#***** Code *****
 	if CheckFmt; then
-        tput setaf "$p_colorCode" && __PROJECT_COLOR_CODE="$p_colorCode"
+        tput setaf "$p_colorCode" && __BU_PROJECT_COLOR_CODE="$p_colorCode"
     else
         return 1
     fi
