--- a/config/projectInit.conf
+++ b/config/projectInit.conf
@@ -7,8 +7,8 @@
 ## PROJECT'S PATH VARIABLES
 
 # Script file's informations
-__PROJECT_FILE=$(basename "$0")                           # Project file's name.
-__PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')         # Name of the project (project file's name without its file extension).
+__BU_PROJECT_FILE=$(basename "$0")                           # Project file's name.
+__BU_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')         # Name of the project (project file's name without its file extension).
 
 # Checking first if the effective user identifiant (EUID) is equal to super-user's EUID or not.
 # The folders names have to be different according to the EUID, as files and folders created by the root user belong to this user,
@@ -16,23 +16,23 @@ __PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')         # Name of the project 
 
 # To remove these folders, please run the "rm -rf $folder" command with sudo if you're not logged as super-user.
 if [ "$EUID" -eq 0 ]; then
-    __PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"	# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME - ROOT"
+    __BU_PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__BU_PROJECT_NAME - ROOT"	# Default --> "$__BASH_UTILS_TMP/$__BU_PROJECT_NAME - ROOT"
 else
-    __PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__PROJECT_NAME"
+    __BU_PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__BU_PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__BU_PROJECT_NAME"
 fi
 
 # Defining the project's log file's path.
-__PROJECT_LOG_DIR_NAME="logs"												# Default --> "logs"
-__PROJECT_LOG_DIR_PATH="$__PROJECT_TMP_DIR_PATH/$__PROJECT_LOG_DIR_NAME"	# Default --> "$__PROJECT_TMP_DIR/$__PROJECT_LOG_DIR_NAME"
-__PROJECT_LOG_FILE_NAME="$__PROJECT_NAME.log"								# Default --> "$__PROJECT_NAME.log"
-__PROJECT_LOG_FILE_PATH="$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"	# Default --> "$__PROJECT_LOG_DIR_PATH/$__PROJECT_LOG_FILE_NAME"
+__BU_PROJECT_LOG_DIR_NAME="logs"												# Default --> "logs"
+__BU_PROJECT_LOG_DIR_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_LOG_DIR_NAME"	# Default --> "$__BU_PROJECT_TMP_DIR/$__BU_PROJECT_LOG_DIR_NAME"
+__BU_PROJECT_LOG_FILE_NAME="$__BU_PROJECT_NAME.log"								# Default --> "$__BU_PROJECT_NAME.log"
+__BU_PROJECT_LOG_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"	# Default --> "$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"
 
 # Defining the project's text formatting building's output file.
-__PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
-__PROJECT_TR_FILE_PATH="$__PROJECT_TMP_DIR_PATH/$__PROJECT_TR_FILE_NAME"	# Default --> "$__PROJECT_TMP_DIR_PATH/$__PROJECT_TR_FILE_NAME"
+__BU_PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
+__BU_PROJECT_TR_FILE_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"	# Default --> "$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"
 
 # Defining the project's color code storage file.
-__PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
-__PROJECT_COLOR_CODE_FILE_PATH="$__PROJECT_TMP_DIR_PATH/$__PROJECT_COLOR_CODE_FILE_NAME"
+__BU_PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
+__BU_PROJECT_COLOR_CODE_FILE_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_COLOR_CODE_FILE_NAME"
 
 # -----------------------------------------------
