--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -3,48 +3,74 @@
 # These status variables can be changed anywhere in the main script, except for the following variables :
 #   - __STAT_DEBUG      -> This variable is used as (...).
 
-# Project's debug variable --> This variable only accepts "true" or "false" as values.
+
+# Project's debug variable
+
+# This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
 __STAT_DEBUG="false"
 
-# Project's error handling --> This variable accepts "fatal" or nothing as value.
+
+# Project's error handling
+
+# This variable accepts "fatal" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __STAT_ERROR=""
 
-# Project's exit code --> This variable only accepts an integer.
+
+# Project's exit code
+
+# This variable only accepts an integer.
 # Default value : "1"
 # shellcheck disable=SC2034
 __STAT_EXIT_CODE="1"
 
-# Project's main log file informations --> This variable only accepts "true" or "false" as values.
+
+# Project's main log file informations
+
+# This variable only accepts "true" or "false" as values.
 # Default value : "true"
 # shellcheck disable=SC2034
 __STAT_LOG="true"
 
-# Project's main log file redirections status --> This variables accepts "log", "tee" or nothing as value.
+
+# Project's main log file redirections status
+
+# This variables accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __STAT_LOG_REDIRECT=""
 
-# Project's authorization to operate at the root directory or one of its sub-folders --> This variable accepts "authorized", "forbidden" or "restricted" as values.
+
+# Project's authorization to operate at the root directory or one of its sub-folders
+
+# This variable accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security).
 # shellcheck disable=SC2034
 __STAT_OPERATE_ROOT="forbidden"
 
-# Project's messages display time --> This variable accepts any integer of floating number.
+
+# Project's messages display time
+
+#This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
 __STAT_TIME_TXT=".5"
 
-# Project's handling text formatting --> This variable accepts "true" or "false" as value.
+
+# Project's handling text formatting
+
+# This variable accepts "true" or "false" as value.
 # Default value : "true"
 # shellcheck disable=SC2034
 __STAT_TXT_FMT="true"
 
+
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
-# --> This variable will be completed with the "CheckSupportedOSType" function.
+
+# This variable will be completed with the "CheckSupportedOSType" function.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
 __STAT_USER_OS=""
