Saving before programming the translations program

--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -35,6 +35,7 @@ __BASH_UTILS_BIN="$(BP_FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils bina
 __BASH_UTILS_CONF="$(BP_FindPath "$__BASH_UTILS_ROOT" "config")"		# Bash Utils configuration files folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_DOCS="$(BP_FindPath "$__BASH_UTILS_ROOT" "docs")"			# Bash Utils documentation folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_LIB="$(BP_FindPath "$__BASH_UTILS_ROOT" "lib")"			# Bash Utils library root directory						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
+__BASH_UTILS_LIB_TRANSL="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"     # Bash Utils library language / translation folder      |   Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_RES="$(BP_FindPath "$__BASH_UTILS_ROOT" "res")"            # Bash Utils resources directory                        |   Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_TMP="$(BP_FindPath "$__BASH_UTILS_ROOT" "tmp")"			# Bash Utils projects temporary folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 
@@ -64,7 +65,10 @@ __BASH_UTILS_CONF_FILE_TEXT="$(BP_FindPath "$__BASH_UTILS_CONF" "Text.conf")"   
 __BASH_UTILS_CONF_FILE_TIME="$(BP_FindPath "$__BASH_UTILS_CONF" "Time.conf")"                       # Bash Utils time variables configuration file.
 
 # Bash Utils initializer path.
-__BASH_UTILS_LIB_FILE_INITIALIZER="$(BP_FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file
+__BASH_UTILS_LIB_FILE_INITIALIZER="$(BP_FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file.
+
+# Bash Utils translations path.
+__BASH_UTILS_TRANSLATION_FILE="$__BASH_UTILS_LANG/lang.csv"                                         # Bash Utils translations file.
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
@@ -83,8 +87,9 @@ __BASH_UTILS_FUNCTIONS_FILES_PATH=("$__BASH_UTILS_LIB_FUNCTS_MAIN/"*.lib )
 # Initialization status.
 __INIT_IS_INITALIZING="true"
 
-# Array of strings, 
-__INIT_STR_ARRAY=()
+# Array of strings, to display in the log file with the date.
+__INIT_STR_ARRAY_LOG_DATE=()
+__INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
 
 # -----------------------------------------------
 
