added the __EchoOutput() function

--- a/config/projectInit.conf
+++ b/config/projectInit.conf
@@ -27,6 +27,10 @@ __BU_PROJECT_LOG_DIR_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_LOG_DIR_NAME
 __BU_PROJECT_LOG_FILE_NAME="$__BU_PROJECT_NAME.log"								# Default --> "$__BU_PROJECT_NAME.log"
 __BU_PROJECT_LOG_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"	# Default --> "$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"
 
+# Defining the project's "Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
+__BU_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log"
+__BU_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_ECHO_OUTPUT_FILE_PATH"
+
 # Defining the project's text formatting building's output file.
 __BU_PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
 __BU_PROJECT_TR_FILE_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"	# Default --> "$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"
