Added interpretation of backslash escapes for every "echo" command

--- a/config/text.conf
+++ b/config/text.conf
@@ -27,9 +27,9 @@ __BU_TXT_PRINT_TAB=">>>>"
 
 ## TEXT FORMATTING
 
-# Bold
-__BU_TXT_BOLD="$(CheckFmt && tput bold)"
-__BU_TXT_BOLD_RESET="$(CheckFmt && tput rmso)"
+# Bold      ## TODO : Check the escape sequences of these tput values.
+__BU_TXT_BOLD="$(CheckFmt && tput bold || echo -e "\E[0;1m")"
+__BU_TXT_BOLD_RESET="$(CheckFmt && tput rmso || )"
 
 # Italic
 __BU_TXT_ITALIC="$(CheckFmt && tput sitm)"
