--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -10,7 +10,7 @@ function BP_FindPath
     # $1 = Parent directory.
     # $2 = Targeted directory or file.
     local path
-        path="$(find "$1" -maxdepth 1 -iname "$2")" && echo "$path"
+        path="$(find "$1" -maxdepth 1 -iname "$2")" && echo -e "$path"
 }
 
 # -----------------------------------------------
@@ -89,7 +89,7 @@ __INIT_IS_INITALIZING="true"
 
 # Array of strings, to display in the log file with the date.
 __INIT_STR_ARRAY_LOG_DATE=()
-__INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
+__INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo -e "$v_cutstr"; done)"
 
 # -----------------------------------------------
 
