--- a/config/projectInit.conf
+++ b/config/projectInit.conf
@@ -7,8 +7,8 @@
 ## PROJECT'S PATH VARIABLES
 
 # Script file's informations
-__BU_PROJECT_FILE=$(basename "$0")                           # Project file's name.
-__BU_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')         # Name of the project (project file's name without its file extension).
+__BU_PROJECT_FILE_NAME=$(basename "$0")                     # Project file's name.
+__BU_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')        # Name of the project (project file's name without its file extension).
 
 # Checking first if the effective user identifiant (EUID) is equal to super-user's EUID or not.
 # The folders names have to be different according to the EUID, as files and folders created by the root user belong to this user,
@@ -21,19 +21,22 @@ else
     __BU_PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__BU_PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__BU_PROJECT_NAME"
 fi
 
+# 
+__BU_PROJECT_FILE_PATH="$(GetParentDirectoryPath "$0")/$__BU_PROJECT_FILE_NAME"
+
 # Defining the project's log file's path.
-__BU_PROJECT_LOG_DIR_NAME="logs"												# Default --> "logs"
+__BU_PROJECT_LOG_DIR_NAME="logs"												    # Default --> "logs"
 __BU_PROJECT_LOG_DIR_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_LOG_DIR_NAME"	# Default --> "$__BU_PROJECT_TMP_DIR/$__BU_PROJECT_LOG_DIR_NAME"
-__BU_PROJECT_LOG_FILE_NAME="$__BU_PROJECT_NAME.log"								# Default --> "$__BU_PROJECT_NAME.log"
-__BU_PROJECT_LOG_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"	# Default --> "$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"
+__BU_PROJECT_LOG_FILE_NAME="$__BU_PROJECT_NAME.log"                                 # Default --> "$__BU_PROJECT_NAME.log"
+__BU_PROJECT_LOG_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME" # Default --> "$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_LOG_FILE_NAME"
 
 # Defining the project's "Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
 __BU_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log"
-__BU_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_ECHO_OUTPUT_FILE_PATH"
+__BU_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_PROJECT_LOG_DIR_PATH/$__BU_PROJECT_ECHO_OUTPUT_FILE_NAME"
 
 # Defining the project's text formatting building's output file.
-__BU_PROJECT_TR_FILE_NAME="tr.tmp"												# Default --> "tr.tmp"
-__BU_PROJECT_TR_FILE_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"	# Default --> "$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"
+__BU_PROJECT_TR_FILE_NAME="tr.tmp"                                                  # Default --> "tr.tmp"
+__BU_PROJECT_TR_FILE_PATH="$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"   # Default --> "$__BU_PROJECT_TMP_DIR_PATH/$__BU_PROJECT_TR_FILE_NAME"
 
 # Defining the project's color code storage file.
 __BU_PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
