Added new text formattings

--- a/config/text.conf
+++ b/config/text.conf
@@ -27,19 +27,35 @@ __BU_TXT_PRINT_TAB=">>>>"
 
 ## TEXT FORMATTING
 
-# Bold      ## TODO : Check the escape sequences of these tput values.
-__BU_TXT_BOLD="$(CheckFmt && tput bold || echo -e "\E[0;1m")"
-__BU_TXT_BOLD_RESET="$(CheckFmt && tput rmso || )"
+# Blink
+__BU_TXT_FMT_BLINK="$(CheckFmt 'blink' '5')"
+__BU_TXT_FMT_BLINK_RESET="$(CheckFmt 'sgr0' '25')"
+
+# Bold
+__BU_TXT_FMT_BOLD="$(CheckFmt 'bold' '1')"
+__BU_TXT_FMT_BOLD_RESET="$(CheckFmt 'rmso' '21')"
+
+# Dim
+__BU_TXT_FMT_DIM="$(CheckFmt '' '2')"
+__BU_TXT_FMT_DIM_RESET="$(CheckFmt '' '22')"
+
+# Hidden (useful for password typing).
+__BU_TXT_FMT_HIDDEN="$(CheckFmt '' '8')"
+__BU_TXT_FMT_HIDDEN_RESET="$(CheckFmt '' '28')"
 
 # Italic
-__BU_TXT_ITALIC="$(CheckFmt && tput sitm)"
-__BU_TXT_ITALIC_RESET=$(CheckFmt && tput ritm)
+__BU_TXT_FMT_ITALIC="$(CheckFmt 'sitm' '3')"
+__BU_TXT_FMT_ITALIC_RESET=$(CheckFmt 'ritm' '23')
 
 # Reset
-__BU_TXT_RESET="$(CheckFmt && tput sgr0)"
+__BU_TXT_FMT_RESET="$(CheckFmt 'sgr0' '0')"
+
+# Strikethrough
+__BU_TXT_FMT_STRIKETHROUGH="$(CheckFmt '' '9')"
+__BU_TXT_FMT_STRIKETHROUGH_RESET="$(CheckFmt '' '29')"
 
 # Underline
-__BU_TXT_UNDERLINE="$(CheckFmt && tput smul)"
-__BU_TXT_UNDERLINE_RESET="$(CheckFmt && tput rmul)"
+__BU_TXT_FMT_UNDERLINE="$(CheckFmt 'smul' '4')"
+__BU_TXT_FMT_UNDERLINE_RESET="$(CheckFmt 'rmul' '24')"
 
 # -----------------------------------------------
