--- a/config/colors.conf
+++ b/config/colors.conf
@@ -14,11 +14,15 @@
 function WriteTextColor()
 {
 	#***** Parameters *****
-	p_colorCode=$1
+	# $1 --> Color code
 
 	#***** Code *****
 	if CheckFmt; then
-        tput setaf "$p_colorCode" && __BU_PROJECT_COLOR_CODE="$p_colorCode"
+        if command -v tput &> /dev/null; then
+            tput setaf "$1" && __BU_PROJECT_COLOR_CODE="$1"
+        else
+            echo -e "\e[38;5;$1m"
+        fi
     else
         return 1
     fi
