--- a/config/text.conf
+++ b/config/text.conf
@@ -25,6 +25,13 @@ __BU_TXT_PRINT_TAB=">>>>"
 
 # -----------------------------------------------
 
+## STORING TEXT
+
+# Storing a string got from a specific line (with a function like "GetLineFromTextFile()", from "main/Files.lib" source file).
+__BU_TXT_STORE_=""
+
+# -----------------------------------------------
+
 ## TEXT FORMATTING
 
 # Blink
