--- a/config/colors.conf
+++ b/config/colors.conf
@@ -21,7 +21,7 @@ function WriteTextColor()
         if command -v tput &> /dev/null; then
             tput setaf "$1" && __BU_PROJECT_COLOR_CODE="$1"
         else
-            echo -e "\e[38;5;$1m"
+            echo -ne "\e[38;5;$1m"
         fi
     else
         return 1
