--- a/config/text.conf
+++ b/config/text.conf
@@ -43,7 +43,7 @@ __BU_TXT_FMT_BOLD="$(CheckFmt 'bold' '1')"
 __BU_TXT_FMT_BOLD_RESET="$(CheckFmt 'rmso' '21')"
 
 # Dim
-__BU_TXT_FMT_DIM="$(CheckFmt '' '2')"
+__BU_TXT_FMT_DIM="$(CheckFmt 'dim' '2')"
 __BU_TXT_FMT_DIM_RESET="$(CheckFmt '' '22')"
 
 # Hidden (useful for password typing).
