Added the "" status variable

--- a/config/projectStatus.conf
+++ b/config/projectStatus.conf
@@ -4,6 +4,14 @@
 #   - __STAT_DEBUG      -> This variable is used as (...).
 
 
+# "CheckProjectLogPath()" function authorization to call the "HandleErrors()" function in case of need.
+
+# This variable only accepts "true" or "false" as values.
+# Default value : false
+# shellcheck disable=SC2034
+__STAT_CPLS="false"
+
+
 # Project's debug variable
 
 # This variable only accepts "true" or "false" as values.
