--- a/config/text.conf
+++ b/config/text.conf
@@ -28,7 +28,9 @@ __BU_TXT_PRINT_TAB=">>>>"
 ## STORING TEXT
 
 # Storing a string got from a specific line (with a function like "GetLineFromTextFile()", from "main/Files.lib" source file).
-__BU_TXT_STORE_=""
+__BU_TXT_STORE_LINE=""
+
+__BU_TXT_STORE_ERROR_MESSAGES_ARRAY=()
 
 # -----------------------------------------------
 
