Corrected a bug about the creation of the tmp folder

--- a/install/config/bash_profile.conf
+++ b/install/config/bash_profile.conf
@@ -10,7 +10,7 @@ function BP_FindPath
     # $1 = Parent directory.
     # $2 = Targeted directory or file.
     local path
-        path="$(find "$1" -maxdepth 1 -iname "$2")" && echo -e "$path"
+        path="$(find "$1" -maxdepth 1 -iname "$2")" && echo "$path"
 }
 
 # -----------------------------------------------
@@ -35,9 +35,7 @@ __BASH_UTILS_BIN="$(BP_FindPath "$__BASH_UTILS_ROOT" "bin")"			# Bash Utils bina
 __BASH_UTILS_CONF="$(BP_FindPath "$__BASH_UTILS_ROOT" "config")"		# Bash Utils configuration files folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_DOCS="$(BP_FindPath "$__BASH_UTILS_ROOT" "docs")"			# Bash Utils documentation folder						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_LIB="$(BP_FindPath "$__BASH_UTILS_ROOT" "lib")"			# Bash Utils library root directory						|	Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_LIB_TRANSL="$(BP_FindPath "$__BASH_UTILS_LIB" "lang")"     # Bash Utils library language / translation folder      |   Default parent folder --> "$__BASH_UTILS_ROOT/"
 __BASH_UTILS_RES="$(BP_FindPath "$__BASH_UTILS_ROOT" "res")"            # Bash Utils resources directory                        |   Default parent folder --> "$__BASH_UTILS_ROOT/"
-__BASH_UTILS_TMP="$(BP_FindPath "$__BASH_UTILS_ROOT" "tmp")"			# Bash Utils projects temporary folder					|	Default parent folder --> "$__BASH_UTILS_ROOT/"
 
 # Bash Utils dev-tools paths.
 __BASH_UTILS_DEVTOOLS_ROOT="$(BP_FindPath "$__BASH_UTILS_RES" "dev-tools")"                        # Bash Utils development tools root directory			|	Default parent folder --> "$__BASH_UTILS_RES/"
@@ -68,7 +66,7 @@ __BASH_UTILS_CONF_FILE_TIME="$(BP_FindPath "$__BASH_UTILS_CONF" "Time.conf")"   
 __BASH_UTILS_LIB_FILE_INITIALIZER="$(BP_FindPath "$__BASH_UTILS_LIB" "Initializer.sh")"             # Bash Utils initializer file.
 
 # Bash Utils translations path.
-__BASH_UTILS_TRANSLATION_FILE="$__BASH_UTILS_LANG/lang.csv"                                         # Bash Utils translations file.
+__BASH_UTILS_TRANSLATION_FILE="$__BASH_UTILS_LIB_LANG/lang.csv"                                         # Bash Utils translations file.
 
 # "functions" folder's sub-folders content.
 # TODO : add the "os-specific" folder when the main library will be stable and when this extension will be done and stable.
@@ -89,7 +87,7 @@ __INIT_IS_INITALIZING="true"
 
 # Array of strings, to display in the log file with the date.
 __INIT_STR_ARRAY_LOG_DATE=()
-__INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo -e "$v_cutstr"; done)"
+__INIT_STR_ARRAY_LOG_NODATE="$(for val in "${__INIT_STR_ARRAY_LOG_DATE[@]}"; do v_cutstr="${val##*] }" && echo "$v_cutstr"; done)"
 
 # -----------------------------------------------
 
