--- a/config/projectInit.conf
+++ b/config/projectInit.conf
@@ -10,15 +10,22 @@
 __BU_PROJECT_FILE_NAME=$(basename "$0")                     # Project file's name.
 __BU_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.')        # Name of the project (project file's name without its file extension).
 
+__BU_PROJECT_TMP_DIR_PARENT_NAME="tmp"
+__BU_PROJECT_TMP_DIR_PARENT_PATH="$__BASH_UTILS_ROOT/$__BU_PROJECT_TMP_DIR_PARENT_NAME"
+
+if [ ! -d "$__BU_PROJECT_TMP_DIR_PARENT_PATH" ]; then
+    mkdir -p "$__BU_PROJECT_TMP_DIR_PARENT_PATH" || { echo >&2; echo "UNABLE TO CREATE THE PROJECT'S TEMPORARY FOLDER'S PARENT DIRECTORY !" >&2; echo >&2; exit 1; }
+fi
+
 # Checking first if the effective user identifiant (EUID) is equal to super-user's EUID or not.
 # The folders names have to be different according to the EUID, as files and folders created by the root user belong to this user,
 # which means that a regular user won't have any write permission on these files, so nothing can be written on a log file, for example.
 
 # To remove these folders, please run the "rm -rf $folder" command with sudo if you're not logged as super-user.
 if [ "$EUID" -eq 0 ]; then
-    __BU_PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__BU_PROJECT_NAME - ROOT"	# Default --> "$__BASH_UTILS_TMP/$__BU_PROJECT_NAME - ROOT"
+    __BU_PROJECT_TMP_DIR_PATH="$__BU_PROJECT_TMP_DIR_PARENT_PATH/$__BU_PROJECT_NAME - ROOT"     # Default --> "$__BU_PROJECT_TMP_DIR_PARENT_PATH/$__BU_PROJECT_NAME - ROOT"
 else
-    __BU_PROJECT_TMP_DIR_PATH="$__BASH_UTILS_TMP/$__BU_PROJECT_NAME"			# Default --> "$__BASH_UTILS_TMP/$__BU_PROJECT_NAME"
+    __BU_PROJECT_TMP_DIR_PATH="$__BU_PROJECT_TMP_DIR_PARENT_PATH/$__BU_PROJECT_NAME"            # Default --> "$__BU_PROJECT_TMP_DIR_PARENT_PATH/$__BU_PROJECT_NAME"
 fi
 
 # 
